# Notificator_test_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  notification_session.session  pyproject.toml
notificator/: bot.py  logger.py  main.py
notificator/config_data/: config.py
notificator/db/: database.py
notificator/db/migrations/: env.py
notificator/db/migrations/versions/: c87e900966a5_initial.py
notificator/db/models/: __init__.py  notes.py  users.py
notificator/fsm/: fsm.py
notificator/handlers/: incorrect_message_handler.py  notes_handlers.py  user_handlers.py
notificator/keyboards/: general_keyboard.py
notificator/lexicon/: lexicon_ru.py
notificator/services/gateways/: notes_gateway.py  users_gateway.py
notificator/services/uttils/: send_reminder.py
